<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="app_name_main_screen">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_the_app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="write_to_support_extra_email">alexander-kad@yandex.ru</string>
    <string name="write_to_support_extra_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_to_support_extra_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_input_hint">Поиск</string>
    <string name="track_list_empty">Ничего не нашлось</string>
    <string name="track_list_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_duration_name_text_view">Длительность</string>
    <string name="track_album_name_text_view">Альбом</string>
    <string name="track_year_name_text_view">Год</string>
    <string name="track_genre_name_text_view">Жанр</string>
    <string name="track_country_name_text_view">Страна</string>
</resources>