<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="@dimen/title_main_text_size"
        android:text="@string/app_name_main_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="28dp"
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <FrameLayout
            android:id="@+id/search"
            style="@style/MainLinearLayoutStyle">
            <Button
                android:drawableLeft="@drawable/ic_search"
                android:text="@string/search"
                style="@style/MainButtonStyle" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/media"
            style="@style/MainLinearLayoutStyle">
            <Button
                android:drawableLeft="@drawable/ic_media"
                android:text="@string/media"
                style="@style/MainButtonStyle" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/settings"
            style="@style/MainLinearLayoutStyle">
            <Button
                android:drawableLeft="@drawable/ic_settings"
                android:text="@string/settings"
                style="@style/MainButtonStyle" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>