<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.Toolbar"
            app:title="@string/settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <FrameLayout
                android:id="@+id/dark_theme"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/title_settings_height">
                <TextView
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/dark_theme" />
                <Switch
                    android:id="@+id/settings_switch"
                    style="@style/SettingsSwitchStyle" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/share_the_app"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/title_settings_height">
                <TextView
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/share_the_app" />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_share"
                    app:tint="@color/grayWhite">
                </ImageView>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/write_to_support"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/title_settings_height">
                <TextView
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/write_to_support" />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_support"
                    app:tint="@color/grayWhite">
                </ImageView>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/user_agreement"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/title_settings_height">
                <TextView
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/user_agreement" />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_arrow_right_gray"
                    app:tint="@color/grayWhite">
                </ImageView>
            </FrameLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>